dropdown: fixes new channel on mobile

--- a/components/layout/header/index.styl
+++ b/components/layout/header/index.styl
@@ -306,6 +306,7 @@ privacy-color('.search__results__result--privacy-', color)
   .new-channel-dropdown__container
     width 100%
     height auto
+    margin 0
 
   .dropdown.dropdown--size
     width 100%
